cmake_minimum_required(VERSION 3.16)
project(Hdony-LeetCode-Classification)

set(CMAKE_CXX_STANDARD 14)

add_executable(Hdony_LeetCode_Classification main.cpp
        Hdony-LC/Set_Map/LeetCode-387-First-Unique-Character-in-a-String/LC-387-Basic-Solu.h
        Hdony-LC/DP/JZOffer-1-Fibonacci-Sequence/JZ-1-Basic-Solu.h
        Hdony-LC/DP/LeetCode-70-Climbing-Stairs/LC-70-Basic-Solu.h Hdony-LC/DP/LeetCode-120-Triangle/LC-120-Basic-Solu.h)